--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "owl.carousel": "^2.3.4",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
+    "react-cookie-consent": "^5.0.1",
     "react-dom": "^16.13.1",
     "react-helmet-async": "^1.0.6",
     "react-icons": "^3.10.0",
