--- a/package.json
+++ b/package.json
@@ -8,18 +8,14 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.0",
-    "owl.carousel": "^2.3.4",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-cookie-consent": "^5.0.1",
     "react-dom": "^16.13.1",
-    "react-helmet-async": "^1.0.6",
     "react-icons": "^3.10.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
-    "react-slick": "^0.26.1",
-    "slick-carousel": "^1.8.1"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
