--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-cookie-consent": "^5.0.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
+    "react-image-gallery": "^1.0.7",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
